--- a/glassdoor_scraping.ipynb
+++ b/glassdoor_scraping.ipynb
@@ -6,6 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "author: arapfaik\n",
+    "url: https://github.com/arapfaik/scraping-glassdoor-selenium\n",
+    "\"\"\"\n",
+    "\n",
     "from selenium.common.exceptions import NoSuchElementException, ElementClickInterceptedException\n",
     "from selenium import webdriver\n",
     "import time\n",
